# eva

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
adapters/hermes/: PROFILE.md  README.md  SOUL.md  settings.template.json
concept/: 2026-05-05-eva-concept.md  2026-05-05-eva-implementation-plan.md
docs/: architecture.md  cli.md  configuration.md  eva-repair.md  hermes-adapter.md  mcp.md  release-readiness.md  remediation-plans.md  safety.md  scheduling-and-notifications.md  skills.md  testing-quickstart.md
docs/history/: 2026-05-05-eva-concept.md  2026-05-05-eva-implementation-plan.md  README.md
docs/plans/: 2026-05-05-public-facing-prep.md  2026-05-06-eva-remediation-plan-and-notifications.md  2026-05-06-github-public-prep.md
examples/: README.md  example-brief.md  example-notification.txt  example-proposal.json  example-remediation-plan.json  example-remediation-plan.md  example-scan.json
examples/minimal-profiles/example-profile/: config.yaml  memory.md
scripts/: public_readiness_check.py
src/eva/: __init__.py  common.py  loop.py  mcp_server.py  proposals.py  settings.py  validators.py
tests/: test_eva_pipeline.py  test_eva_proposal_lifecycle.py  test_eva_proposal_outcomes.py  test_eva_remediation_plans.py  test_eva_repair_apply_policy.py  test_eva_repair_cli.py  test_eva_repair_drafters.py  test_eva_repair_e2e.py  test_eva_repair_ledger.py  test_eva_repair_planner.py  test_eva_repair_policies.py  test_eva_repair_schemas.py  test_eva_repair_verify_closeout.py  test_eva_validators.py  test_mcp_server.py
tests/fixtures/: scan_memory_live.json
(+26 files in other folders)
